C2LC-531: Fixed vertical 'jumping' on toggle and improved scrolling at high zoom.

--- a/src/KeyboardInputModal.scss
+++ b/src/KeyboardInputModal.scss
@@ -1,9 +1,7 @@
 @import '_variables';
 
 .KeyboardInputModal__content {
-    overflow: auto;
     width: 45rem;
-    max-height: 30rem;
     padding: 0;
     padding-top: 0.5rem;
 }
@@ -49,6 +47,9 @@
 }
 
 .KeyboardInputModal__content__list {
+    overflow: auto;
+    max-height: 23rem;
+
     background-color: #F1F2F4;
     padding: 1rem;
     display: grid;
@@ -64,10 +65,6 @@
         flex-direction: column;
         column-gap: 0;
     }
-}
-
-.KeyboardInputModal__content__list--disabled {
-    display: none;
 }
 
 .KeyboardInputModal__binding {
